--- a/css/styles.css
+++ b/css/styles.css
@@ -44,12 +44,18 @@ body {
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
+    height: 300px;
     color: white;
     text-align: center;
 }
 
+#what-we-do {
+    height: 100%;
+}
+
 #what-we-do div {
     width: 100%;
+    height: 100%;
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -91,6 +97,29 @@ input, textarea {
 
 .text-showing {
     display: block;
+}
+
+.overlay {
+  position: relative;
+  bottom: 0;
+  background: rgb(253, 251, 251);
+  color: #f1f1f1;
+  transition: .5s ease;
+  opacity: 0.3;
+}
+
+.portfolio {
+    position: relative;
+    text-align: center;
+    color: white;
+}
+
+.project1text {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: black;
 }
 
 figcaption {
